fix: fixes missing border-radius on user card

--- a/src/styles/components/userCard.module.scss
+++ b/src/styles/components/userCard.module.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   box-shadow: 0 2px 10px 0 var(--shadow-color);
+  border-radius: 4px;
 
   .userImg {
     width: 64px;
